@@ -1,242 +1,41 @@
+require 'moosex/types'
+require 'moosex/attribute/modifiers'
+
 module MooseX
     class Attribute
     include MooseX::Types
 
     attr_reader :attr_symbol, :is, :reader, :writter, :lazy, :builder, :methods, :override
-    DEFAULTS= { 
-      is: :rw,
-      weak: false,
-      lazy: false,
-      clearer: false,
-      required: false, 
-      predicate: false,
-      isa: isAny,
-      handles: {},
-      trigger: lambda {|object,value|},  # TODO: implement
-      coerce: lambda {|object| object},  # TODO: implement
-      doc: nil,
-      override: false,
-    }
 
-    REQUIRED = []
-
-    VALIDATE = {
-      is: lambda do |is, field_name| 
-        unless [:rw, :rwp, :ro, :lazy, :private].include?(is)
-          raise InvalidAttributeError, "invalid value for field '#{field_name}' is '#{is}', must be one of :private, :rw, :rwp, :ro or :lazy"  
-        end
-      end,
-    };
-
-    COERCE = {
-      is: lambda do |is, field_name| 
-        is.to_sym 
-      end,
-      isa: lambda do |isa, field_name| 
-        isType(isa) 
-      end,
-      default: lambda do |default, field_name|
-        return default if default.is_a? Proc
-
-        return lambda { default }   
-      end,
-      required: lambda do |required, field_name| 
-        !!required 
-      end,
-      lazy: lambda do |lazy, field_name| 
-        !!lazy 
-      end,      
-      predicate: lambda do |predicate, field_name| 
-        if ! predicate
-          return false
-        elsif predicate.is_a? TrueClass
-          return "has_#{field_name}?".to_sym
-        end
-
-        begin
-          predicate.to_sym
-        rescue => e
-          # create a nested exception here
-          raise InvalidAttributeError, "cannot coerce field predicate to a symbol for #{field_name}: #{e}"
-        end
-      end,
-      clearer: lambda do|clearer, field_name| 
-        if ! clearer
-          return false
-        elsif clearer.is_a? TrueClass
-          return "clear_#{field_name}!".to_sym
-        end
-    
-        begin
-          clearer.to_sym
-        rescue => e
-          # create a nested exception here
-          raise InvalidAttributeError, "cannot coerce field clearer to a symbol for #{field_name}: #{e}"
-        end
-      end,
-      handles: lambda do |handles, field_name|
-              
-        unless handles.is_a? Hash 
-
-          array_of_handles = handles
-
-          unless array_of_handles.is_a? Array
-            array_of_handles = [ array_of_handles ]
-          end
-
-          handles = array_of_handles.map do |handle|
-
-            if handle == BasicObject
-              
-              raise InvalidAttributeError, "ops, should not use BasicObject for handles in #{field_name}"
-            
-            elsif handle.is_a? Class
-
-              handle = handle.public_instance_methods - handle.superclass.public_instance_methods
-            
-            elsif handle.is_a? Module
-              
-              handle = handle.public_instance_methods
-
-            end
-            
-            handle
-
-          end.flatten.reduce({}) do |hash, method_name|
-            hash.merge({ method_name => method_name })
-          end
-        end
-
-        handles.map do |key,value|
-          if value.is_a? Hash
-            raise "ops! Handle should accept only one map / currying" unless value.count == 1
-            
-            original, currying = value.shift
-  
-            { key.to_sym => [original.to_sym, currying] }
-          else
-            { key.to_sym => value.to_sym }
-          end
-        end.reduce({}) do |hash,e| 
-          hash.merge(e)
-        end
-      end,
-      reader: lambda do |reader, field_name|
-        reader.to_sym
-      end,
-      writter: lambda do |writter, field_name|
-        writter.to_sym
-      end,
-      builder: lambda do |builder, field_name|
-        unless builder.is_a? Proc
-          builder_method_name = builder.to_sym
-          builder = lambda do |object|
-            object.send(builder_method_name)
-          end
-        end
-
-        builder
-      end,
-      init_arg: lambda do |init_arg, field_name|
-        init_arg.to_sym
-      end,
-      trigger: lambda do |trigger, field_name|
-        unless trigger.is_a? Proc
-          trigger_method_name = trigger.to_sym
-          trigger = lambda do |object, value|
-            object.send(trigger_method_name,value)
-          end
-        end
-
-        trigger       
-      end,
-      coerce: lambda do |coerce, field_name|
-        unless coerce.is_a? Proc
-          coerce_method_name = coerce.to_sym
-          coerce = lambda do |object|
-            object.send(coerce_method_name)
-          end
-        end
-
-        coerce        
-      end,
-      weak: lambda do |weak, field_name|
-        !! weak
-      end,
-      doc: lambda do |doc, field_name|
-        doc.to_s
-      end,
-      override: lambda do |override, field_name|
-        !! override
-      end,
-    };
-
-    def initialize(a, o ,x)
-      #o ||= {}
-      # todo extract this to a framework, see issue #21 on facebook
-      o = DEFAULTS.merge({
-        reader: a,
-        writter: a.to_s.concat("=").to_sym,
-        builder: "build_#{a}".to_sym,
-        init_arg: a,
-      }).merge(o)
-
-      REQUIRED.each { |field| 
-        unless o.has_key?(field)
-          raise InvalidAttributeError, "field #{field} is required for Attribute #{a}" 
-        end
-      }
-      COERCE.each_pair do |field, coerce|
-        if o.has_key? field
-          o[field] = coerce.call(o[field], a)
-        end
-      end
-      VALIDATE.each_pair do |field, validate|
-        return if ! o.has_key? field
-
-        validate.call(o[field], a)
-      end
-
-      if o[:is].eql? :ro  
-        o[:writter] = nil
-      elsif o[:is].eql? :lazy
-        o[:lazy] = true
-        o[:writter] = nil
-      end
-
-      unless o[:lazy]
-        o[:builder] = nil
-      end
-
-      if o[:weak]
-        old_coerce = o[:coerce]
-        o[:coerce] = lambda do |value|
-          WeakRef.new old_coerce.call(value)
-        end
-      end
-
-      @attr_symbol   = a
-      @is            = o.delete(:is)
-      @isa           = o.delete(:isa)
-      @default       = o.delete(:default)
-      @required      = o.delete(:required) 
-      @predicate     = o.delete(:predicate)
-      @clearer       = o.delete(:clearer)
-      @handles       = o.delete(:handles)
-      @lazy          = o.delete(:lazy)
-      @reader        = o.delete(:reader)
-      @writter       = o.delete(:writter)
-      @builder       = o.delete(:builder)
-      @init_arg      = o.delete(:init_arg)
-      @trigger       = o.delete(:trigger)
-      @coerce        = o.delete(:coerce)
-      @weak          = o.delete(:weak)
-      @documentation = o.delete(:doc)
-      @override      = o.delete(:override)
+    def initialize(attr_symbol, options_original ,klass)
+      options = options_original.clone
+ 
+      @attr_symbol   = attr_symbol
+      @is            = Is.new.process(options, attr_symbol)
+      @isa           = Isa.new.process(options, attr_symbol)
+      @default       = Default.new.process(options, attr_symbol)
+      @required      = Required.new.process(options, attr_symbol)
+      @predicate     = Predicate.new.process(options, attr_symbol)
+      @clearer       = Clearer.new.process(options, attr_symbol)
+      @handles       = Handles.new.process(options, attr_symbol)
+      @lazy          = Lazy.new.process(options, attr_symbol) 
+      @reader        = Reader.new.process(options, attr_symbol)
+      @writter       = Writter.new.process(options, attr_symbol)
+      @builder       = Builder.new.process(options, attr_symbol) # warn if has builder and it is not lazy
+      @init_arg      = InitArg.new.process(options, attr_symbol)
+      @trigger       = Trigger.new.process(options, attr_symbol)
+      @coerce        = Coerce.new.process(options, attr_symbol)
+      @weak          = Weak.new.process(options, attr_symbol)
+      @documentation = Doc.new.process(options, attr_symbol)
+      @override      = Override.new.process(options, attr_symbol)
       @methods       = {}
 
-      MooseX.warn "Unused attributes #{o} for attribute #{a} @ #{x} #{x.class}",caller() if ! o.empty?  
-
+      MooseX.warn "Unused attributes #{options} for attribute #{attr_symbol} @ #{klass} #{klass.class}",caller() if ! options.empty?  
+    
+      generate_all_methods
+    end
+    
+    def generate_all_methods  
       if @reader 
         @methods[@reader] = generate_reader
       end
@@ -244,6 +43,7 @@ module MooseX
       if @writter 
         @methods[@writter] = generate_writter
       end
+
       inst_variable_name = "@#{@attr_symbol}".to_sym
       if @predicate
         @methods[@predicate] = Proc.new do
@@ -251,6 +51,7 @@ module MooseX
         end
       end
 
+      inst_variable_name = "@#{@attr_symbol}".to_sym
       if @clearer
         @methods[@clearer] = Proc.new do
           if instance_variable_defined? inst_variable_name
@@ -259,7 +60,10 @@ module MooseX
         end
       end
       
-      attr_symbol = @attr_symbol
+      generate_handles @attr_symbol   
+    end
+
+    def generate_handles(attr_symbol)
       @handles.each_pair do | method, target_method |
         if target_method.is_a? Array
           original, currying = target_method
@@ -281,8 +85,8 @@ module MooseX
             self.send(attr_symbol).send(target_method, *args, &proc)
           end
         end 
-      end     
-    end
+      end  
+    end        
     
     def init(object, args)
       value  = nil
